<?xml version="1.0" encoding="utf-8"?>
<!-- Meni za NavigationDrawer -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        
        <!-- Stavka za MainScreen -->
        <item
            android:id="@+id/nav_main"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_main" />

        <!-- Stavka za AccountScreen -->
        <item
            android:id="@+id/nav_account"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_account" />

        <!-- Stavka za NotificationsScreen -->
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_notifications" />

    </group>

    <!-- Razdvajač -->
    <item android:title="@string/nav_section_other">
        <menu>
            <!-- Odjava -->
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>

